# mnger-backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml  nixpacks.toml
.devcontainer/: .env  devcontainer.json
.devcontainer/scripts/: postCreateCommand.sh
.github/workflows/: rust.yml
altera/: Cargo.toml
altera/src/: lib.rs  main.rs  user.rs
altera/src/authorization/: m20240321_001343_rbac_initial.rs  mod.rs  model.rs
altera/src/user/: m20220101_000001_create_table.rs  m20240819_145713_add_verification_table.rs  m20240820_105510_seed_verfication_type_data.rs  mod.rs  model.rs
altera/src/workorder/: m20240325_143045_workorder.rs  m20240616_164610_workorder_user_fk.rs  mod.rs  model.rs
api/: Cargo.toml
api/src/: lib.rs  pool.rs
api/src/routes/: mod.rs
api/src/routes/users/: fetch_profile.rs  mod.rs
dto/: Cargo.toml
dto/src/: dto.rs
entity/: Cargo.toml
entity/src/: lib.rs  user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
nebula/: Cargo.toml
nebula/src/: docs.rs  lib.rs
nebula/src/routes/: mod.rs
nebula/src/routes/account/: login.rs  mod.rs
nebula/src/routes/index/: entry.rs  mod.rs
nebula/src/routes/media/: fetch_avatar.rs  mod.rs
nebula/src/routes/users/: create_user.rs  edit_user.rs  fetch_profile.rs  me.rs  mod.rs
nebula/src/routes/workorder/: create_workorder.rs  fetch_workorder.rs  list_workorders.rs  mod.rs
nebula/templates/: index.tera
preon/: Cargo.toml
preon/src/: lib.rs
preon/src/auth/: util.rs
preon/src/derive/: rocket.rs
preon/src/dto/: mod.rs  users.rs  work_order.rs
preon/src/impl/: mod.rs
preon/src/impl/postgres/: mod.rs
preon/src/impl/postgres/users/: account.rs  user.rs
preon/src/impl/postgres/workorders/: workorder.rs
preon/src/impl/storage/: s3.rs
preon/src/models/: mod.rs
preon/src/models/authorization/: module.rs  permission.rs  role.rs  role_module.rs  role_permission.rs
preon/src/models/users/: company.rs  session.rs  team.rs  team_participant.rs  timezone.rs  user.rs  verficiation_type.rs  verification.rs
preon/src/models/workorders/: work_order_assignment.rs  workorder.rs
preon/src/util/: mod.rs  result.rs  time.rs
preon/src/util/variables/: api.rs
service/: Cargo.toml
service/src/: lib.rs  mutation.rs  query.rs
service/src/operations/users/: user.rs
src/: main.rs
