[package]
name = "mnger-api"
version = "0.1.0"
authors = ["Maykol Laguna <lagunamichael2@outlook.com>"]
edition = "2021"
publish = false

[dependencies]
async-stream = { version = "0.3.5" }
async-trait = { version = "0.1.73" }
futures = { version = "0.3.28" }
futures-util = { version = "0.3.28" }
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde_json = { version = "1.0.107" }
tokio = "1.20.0"
serde = "1.0"
dotenvy = "0.15"
entity = { path = "../entity" }
migration = { path = "../migration" }
mnger-api-service = { path = "../service" }

[dependencies.sea-orm-rocket]
version = "0.5.1"