[package]
name = "mnger-api"
version = "0.1.0"
authors = ["Maykol Laguna <lagunamichael2@outlook.com>"]
edition = "2021"
publish = false

[dependencies]

# Async
async-stream = { version = "0.3.5" }
async-trait = { version = "0.1.73" }
futures = { version = "0.3.28" }
futures-util = { version = "0.3.28" }
chrono = "0.4.31"

rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde_json = { version = "1.0.107" }
tokio = "1.20.0"
serde = "1.0"
dotenvy = "0.15"
entity = { path = "../entity" }
migration = { path = "../migration" }
mnger-api-service = { path = "../service" }

# Utility
lru = "0.12.1"
url = "2.2.2"
log = "0.4.11"
dotenv = "0.15.0"
dashmap = "5.2.0"
linkify = "0.10.0"
once_cell = "1.17.1"
env_logger = "0.10.2"

# ID
ulid = "0.4.1"
nanoid = "0.4.0"

# Spec Generation
schemars = "0.8.16"
revolt_okapi = { git = "https://github.com/0xlaguna/okapi.git", branch = "master" }
revolt_rocket_okapi = { git = "https://github.com/0xlaguna/okapi.git", branch = "master", features = ["swagger"] }

[dependencies.sea-orm-rocket]
version = "0.5.1"