[package]
name = "dto"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "dto"
path = "src/lib.rs"

[dependencies]
rocket = { version = "=0.5.0", features = ["json"] }

[dependencies.entity]
path = "../entity"

[dependencies.rocket_okapi]
git = "https://github.com/GREsau/okapi.git"
branch = "master"
features = ["swagger", "rapidoc","rocket_db_pools"]