[package]
name = "mnger-nebula"
version = "0.1.0"
authors = ["Maykol Laguna <lagunamichael2@outlook.com>"]
edition = "2021"
publish = false

[dependencies]
# Web
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
reqwest = { version = "0.12.7", features = ["stream"] }

# Database
sea-orm-rocket = "0.5.4"

# Async
futures = "0.3.30"
async-trait = "0.1.82"
async-stream = "0.3.5"
futures-util = "0.3.30"

# Serialisation
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }

# Time
chrono = "0.4.38"

tokio = "1.40.0"
dotenvy = "0.15.7"

# Utility
lru = "0.12.4"
url = "2.5.2"
log = "0.4.22"
dotenv = "0.15.0"
dashmap = "6.1.0"
linkify = "0.10.0"
once_cell = "1.19.0"
env_logger = "0.11.5"
memchr = "2.7.4"
tempfile = "3.12.0"
ulid = "1.1.3"
nanoid = "0.4.0"

# Spec Generation
schemars = "0.8.21"
utoipa = { version = "4.2.3", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["rocket", "vendored"] }
utoipa-redoc = { version = "4.0.0", features = ["rocket"] }
utoipa-rapidoc = { version = "4.0.0", features = ["rocket"] }
utoipa-scalar = { version = "0.1.0", features = ["rocket"] }

# Migrations
altera = { path = "../altera" }
# preon
mnger-preon = { path = "../preon" }
