[package]
name = "mnger-preon"
version = "0.1.0"
edition = "2021"

[features]
rocket_impl = [
    "rocket_empty",
    "rocket_cors",

    "authifier/rocket_impl",
    "authifier/okapi_impl",
]


[dependencies]
# Web
rocket_http = { optional = true, version = "0.5.0" }
rocket = { version = "0.5.0", features = ["json"] }
rocket_empty = { version = "0.1.1", optional = true, features = ["schema"] }
rocket_cors = {optional = true, version = "0.6.0" }

# Spec Generation
schemars = "0.8.16"
okapi = { git = "https://github.com/GREsau/okapi.git", branch = "master" }
rocket_okapi = { git = "https://github.com/GREsau/okapi.git", branch = "master", features = ["swagger"] }

once_cell = "1.9.0"

# Async
futures = "0.3.30"
deadqueue = "0.2.4"
async-trait = "0.1.77"
async-recursion = "1.0.5"
async-std = { version = "1.12.0", features = ["attributes"], optional = true }

# Serialisation
revolt_optional_struct = "0.2.0"
serde = { version = "1", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
iso8601-timestamp = { version = "0.1.8", features = ["schema", "bson"] }

# Formats
bincode = "1.3.3"
serde_json = "1.0.111"
bson = { version = "2.8.1", features = ["chrono-0_4"] }

# Logging
log = "0.4.20"
pretty_env_logger = "0.5.0"

# Authifier
authifier = { version = "1.0.8", features = ["async-std-runtime"] }
