[package]
name = "mnger-preon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
rocket_http = { optional = true, version = "0.5.0" }
rocket = { version = "0.5.0", features = ["json"] }
rocket_empty = { version = "0.1.1", optional = true, features = ["schema"] }
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"

sea-orm = { version = "0.12.10", features = ["runtime-tokio-native-tls", "sqlx-postgres", "with-chrono"] }
sea-orm-rocket = "0.5.1"

schemars = "0.8.16"
once_cell = "1.9.0"

# Async
futures = "0.3.30"
deadqueue = "0.2.4"
async-trait = "0.1.77"
async-recursion = "1.0.5"
async-std = { version = "1.12.0", features = ["attributes"], optional = true }

# Serialisation
revolt_optional_struct = "0.2.0"
serde = { version = "1", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
iso8601-timestamp = { version = "0.1.8", features = ["schema", "bson"] }

# Time
chrono =  "0.4.33"

# Formats
bincode = "1.3.3"
serde_json = "1.0.111"
bson = { version = "2.8.1", features = ["chrono-0_4"] }

# Logging
log = "0.4.20"
pretty_env_logger = "0.5.0"

# Authifier
# authifier = { version = "1.0.8", features = ["async-std-runtime"] }

# Lang
regex = "1.10.3"
nanoid = "0.4.0"
lazy_static = "1.4.0"
rust-argon2 = "2.1.0"

aws-smithy-runtime= { version = "1.6.2" }
aws-smithy-runtime-api= { version = "1.7.2", features = ["client"] }
aws-smithy-types = { version = "1.2.0", features = ["http-body-0-4-x"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.43.0"
clap = { version = "4.4", features = ["derive"]}
pin-project = "1.0.12"
http = "1.1.0"
http-body = "1.0.1"
tracing = "0.1.37"
bytes = "1.4.0"

# Spec
utoipa = { version = "4.2.3", features = ["rocket_extras"] }

tempfile = "3.12.0"
ulid = "1.1.2"
lettre = "0.11.7"
strong_id = "0.4.0"