[package]
name = "mnger-preon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
rocket_http = { optional = true, version = "0.5.0" }
rocket = { version = "0.5.0", features = ["json"] }
rocket_empty = { version = "0.1.1", optional = true, features = ["schema"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
http = "1.1.0"
http-body = "1.0.1"

# Database
sea-orm = { version = "1.0.1", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-chrono",
] }
sea-orm-rocket = "0.5.4"

# Async
futures = "0.3.30"
deadqueue = "0.2.4"
async-trait = "0.1.82"
async-recursion = "1.1.1"
async-std = { version = "1.13.0", features = ["attributes"], optional = true }

# Serialisation
revolt_optional_struct = "0.2.0"
serde = { version = "1.0.210", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }

# Time
chrono = "0.4.38"
iso8601-timestamp = { version = "0.2.17", features = ["schema", "bson"] }

# Formats
bincode = "1.3.3"
serde_json = "1.0.128"
bson = { version = "2.12.0", features = ["chrono-0_4"] }

# Utility
log = "0.4.22"
pretty_env_logger = "0.5.0"
once_cell = "1.19.0"
nanoid = "0.4.0"
lazy_static = "1.5.0"
rust-argon2 = "2.1.0"
regex = "1.10.6"
bytes = "1.7.2"
pin-project = "1.1.5"
tracing = "0.1.40"
tempfile = "3.12.0"
ulid = "1.1.3"
lettre = "0.11.9"
strong_id = { version = "0.4.0", features = [
    "delimited",
    "uuid-v7",
    "serde",
    "typeid",
] }

# AWS
aws-smithy-runtime = { version = "1.7.1" }
aws-smithy-runtime-api = { version = "1.7.2", features = ["client"] }
aws-smithy-types = { version = "1.2.6", features = ["http-body-0-4-x"] }
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.51.0"
clap = { version = "4.5.17", features = ["derive"] }

# Spec Generation
schemars = "0.8.21"
utoipa = { version = "4.2.3", features = ["rocket_extras"] }
