[package]
name = "mnger-api-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "0.12.9"
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

[dev-dependencies]
tokio = "1.32.0"

# [features]
# mock = ["sea-orm/mock"]

# [[test]]
# name = "mock"
# required-features = ["mock"]